--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,29 @@
-version: '3.8'
-
+version: "3.5"
+networks:
+  default:
+    driver: bridge
+    name: localhost
 services:
-  php-fpm:
+  app:
     build:
-      context: .
+      context: ./
       dockerfile: Dockerfile
+    expose:
+      - 9000
+      - 9003
     volumes:
-      - .:/var/www/html
-
+      - ./:/var/www/html
+      - ./php.ini:/usr/local/etc/php/conf.d/php.ini
+    networks:
+      - default
   nginx:
-    image: nginx:latest
+    image: nginx:alpine
     ports:
-      - "8080:80"
+      - 80:80
     volumes:
-      - .:/var/www/html
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./:/var/www/html
+      - ./nginx:/etc/nginx/conf.d/
+    networks:
+      - default
     depends_on:
-      - php-fpm
+      - app
