redircet path remove port in env example

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ DB_URL=sqlite:/var/www/html/database.db
 
 GOOGLE_CLIENT_ID=your-client-id
 GOOGLE_CLIENT_SECRET=your-client-secret
-LOGIN_REDIRECT_PATH=http://localhost:8080/oauth/callback/login.php
-CALENDAR_REDIRECT_PATH=http://localhost:8080/oauth/callback/calendar.php
+LOGIN_REDIRECT_PATH=http://localhost/oauth/callback/login.php
+CALENDAR_REDIRECT_PATH=http://localhost/oauth/callback/calendar.php
